Bug 509937 - Fails to build with master plasma-activities
Summary: Fails to build with master plasma-activities
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 509965 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-25 18:04 UTC by daron439
Modified: 2025-09-28 06:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2025-09-25 18:04:17 UTC
SUMMARY
Fails to build after https://invent.kde.org/plasma/plasma-activities/-/commit/690d377810f775b0e4e7512f9516c8a9ba123d4f

/builddir/build/BUILD/konqueror-25.11.70_12.gitc783b25-build/konqueror-c783b25738711baa9ae79f11115bfaa19b7d4a6e/src/activitymanager.cpp: In constructor ‘ActivityManager::ActivityManager(QObject*)’:
/builddir/build/BUILD/konqueror-25.11.70_12.gitc783b25-build/konqueror-c783b25738711baa9ae79f11115bfaa19b7d4a6e/src/activitymanager.cpp:25:59: error: ‘runningActivitiesChanged’ is not a member of ‘KActivities::Consumer’
   25 |     connect(m_activitiesConsumer, &KActivities::Consumer::runningActivitiesChanged, this, &ActivityManager::handleRunningActivitiesChange);
      |                                                           ^~~~~~~~~~~~~~~~~~~~~~~~
/builddir/build/BUILD/konqueror-25.11.70_12.gitc783b25-build/konqueror-c783b25738711baa9ae79f11115bfaa19b7d4a6e/src/activitymanager.cpp: In member function ‘void ActivityManager::handleWindowChanged(WId, NET::Properties, NET::Properties2)’:
/builddir/build/BUILD/konqueror-25.11.70_12.gitc783b25-build/konqueror-c783b25738711baa9ae79f11115bfaa19b7d4a6e/src/activitymanager.cpp:187:59: error: ‘class KActivities::Consumer’ has no member named ‘runningActivities’
  187 |     QStringList runningActivities = m_activitiesConsumer->runningActivities();

STEPS TO REPRODUCE
1. Build with master plasma-activities

OBSERVED RESULT
Fails to build

EXPECTED RESULT
Builds fine

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Stefano Crocco 2025-09-26 16:08:47 UTC
*** Bug 509965 has been marked as a duplicate of this bug. ***
Comment 2 Nicolas Fella 2025-09-27 11:10:04 UTC
With Plasma 6.5 all activities are always running, so consequently the API for starting/stopping and the activity status was removed. Any code that does something based on activity status is now dead.

See https://blog.davidedmundson.co.uk/blog/upcoming-changes-to-activities-in-plasma-6-5/
Comment 3 Victor Ryzhykh 2025-09-27 12:06:14 UTC
(In reply to Nicolas Fella from comment #2)
> With Plasma 6.5 all activities are always running, so consequently the API
> for starting/stopping and the activity status was removed. Any code that
> does something based on activity status is now dead.
> 
> See
> https://blog.davidedmundson.co.uk/blog/upcoming-changes-to-activities-in-
> plasma-6-5/

That's understandable. But the konueror package will need to be compiled in the future and recompiled now with the new plasma-6.5.
On the new plasma6.5, the installation of the konqueror package is already broken.

dnf in konqueror

Error:
Problem: problem with installed package lib64plasmaactivities7-6.4.90-2.x86_64
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from @System conflicts with lib64plasmaactivities6 < 6.4.7 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from @System conflicts with lib64plasmaactivities6 < 6.4.90-2 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - installed package lib64plasmaactivities7-6.4.90-2.x86_64 obsoletes lib64plasmaactivities6 < 6.4.7 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - installed package lib64plasmaactivities7-6.4.90-2.x86_64 obsoletes lib64plasmaactivities6 < 6.4.90-2 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from kde6 conflicts with lib64plasmaactivities6 < 6.4.7 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from kde6 conflicts with lib64plasmaactivities6 < 6.4.90-2 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from kde6 obsoletes lib64plasmaactivities6 < 6.4.7 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package lib64plasmaactivities7-6.4.90-2.x86_64 from kde6 obsoletes lib64plasmaactivities6 < 6.4.90-2 provided by lib64plasmaactivities6-6.4.3-1.x86_64 from mirror-rosa-x86_64-main
  - package plasma6-konqueror-1:25.08.1-1.x86_64 from kde6 requires libPlasmaActivities.so.6()(64bit), but none of the providers can be installed
  - cannot install the best candidate for the job
Comment 4 Victor Ryzhykh 2025-09-27 12:09:19 UTC
(In reply to Victor Ryzhykh from comment #3)
> (In reply to Nicolas Fella from comment #2)
> > With Plasma 6.5 all activities are always running, so consequently the API
> > for starting/stopping and the activity status was removed. Any code that
> > does something based on activity status is now dead.
> > 
> > See
> > https://blog.davidedmundson.co.uk/blog/upcoming-changes-to-activities-in-
> > plasma-6-5/
> 
> That's understandable. But the konueror package will need to be compiled in
> the future and recompiled now with the new plasma-6.5.
> On the new plasma6.5, the installation of the konqueror package is already
> broken.
> 
> dnf in konqueror
> 
> Error:
> Problem: problem with installed package

It's on the system

Operating System: ROSA Fresh Desktop 13
KDE Plasma Version: 6.4.90
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.9-generic-1rosa13-x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-7700K CPU @ 4.20GHz
Memory: 32 ГиБ of RAM (31.2 ГиБ usable)
Graphics Processor: NVIDIA GeForce RTX 3050
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B250M-D3H
Comment 5 Bug Janitor Service 2025-09-27 18:10:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/446
Comment 6 Stefano Crocco 2025-09-27 18:33:21 UTC
Git commit 7cdfaa103c24ba5aa3ba716c2026e34bd270b47a by Stefano Crocco.
Committed on 27/09/2025 at 18:33.
Pushed by stefanocrocco into branch 'master'.

Disable functionality related to running activities when compiling with Plasma 6.5

M  +13   -0    src/activitymanager.cpp
M  +18   -4    src/activitymanager.h

https://invent.kde.org/network/konqueror/-/commit/7cdfaa103c24ba5aa3ba716c2026e34bd270b47a
Comment 7 Stefano Crocco 2025-09-27 19:30:17 UTC
It should be fixed now.

I'd like to know, however, if there's a way to know in advance about breaking changes like this one, to have more time to prepare for them.
Comment 8 Victor Ryzhykh 2025-09-27 20:28:56 UTC
(In reply to Stefano Crocco from comment #7)
> It should be fixed now.
> 
> I'd like to know, however, if there's a way to know in advance about
> breaking changes like this one, to have more time to prepare for them.

Thank you. This fixed the problem with building and installing Konqueror.
Comment 9 Antonio Rojas 2025-09-28 06:37:55 UTC
Please push the fix to 25.08 too, the Plasma breaking change will be released in a few weeks
Comment 10 Stefano Crocco 2025-09-28 06:45:27 UTC
Git commit a33e34c749acbd6247279863aac3b90d44f27814 by Stefano Crocco.
Committed on 28/09/2025 at 06:45.
Pushed by stefanocrocco into branch 'release/25.08'.

Disable functionality related to running activities when compiling with Plasma 6.5


(cherry picked from commit 7cdfaa103c24ba5aa3ba716c2026e34bd270b47a)

c90d9095 Disable functionality related to running activities when compiling with Plasma 6.5
2fe10347 Use correct include

Co-authored-by: Stefano Crocco <stefano.crocco@alice.it>

M  +13   -0    src/activitymanager.cpp
M  +18   -4    src/activitymanager.h

https://invent.kde.org/network/konqueror/-/commit/a33e34c749acbd6247279863aac3b90d44f27814