Disable functionality related to running activities when compiling with Plasma 6.5

BUG: 509937